--- a/actividad_final_marketing.html
+++ b/actividad_final_marketing.html
@@ -99,7 +99,7 @@
     </section>
 
     <footer>
-        <p>&copy; 2025 CyberEduca. Todos los derechos reservados.</p>
+        <p>CyberEduca</p> 
     </footer>
 </body>
 </html>
