--- a/index.html
+++ b/index.html
@@ -170,12 +170,12 @@
 
     <section id="contact">
         <h2>Contacto</h2>
-        <p>Email: raulluengop@cybereduca.com</p>
+        <p>Email: raulluengop@gmail.com</p>
         <p>Síguenos en nuestras redes sociales para más información y actualizaciones.</p>
     </section>
 
     <footer>
-        <p>&copy; 2025 CyberEduca</p>
+        <p>CyberEduca</p>
     </footer>
 </body>
 </html>
