--- a/actividad1_marketing.html
+++ b/actividad1_marketing.html
@@ -111,7 +111,7 @@
     </section>
 
     <footer>
-        <p>&copy; 2025 CyberEduca</p>
+        <p>CyberEduca</p>
     </footer>
 </body>
 </html>
