--- a/actividad2_marketing.html
+++ b/actividad2_marketing.html
@@ -155,7 +155,7 @@
     </section>
 
     <footer>
-        <p>&copy; 2025 CyberEduca</p>
+        <p>CyberEduca</p> 
     </footer>
 </body>
 </html>
