--- a/actividad3_marketing.html
+++ b/actividad3_marketing.html
@@ -154,7 +154,7 @@
     </section>
 
     <footer>
-        <p>&copy; 2025 CyberEduca</p>
+        <p>CyberEduca</p> 
     </footer>
 </body>
 </html>
