--- a/actividad4_marketing.html
+++ b/actividad4_marketing.html
@@ -169,7 +169,7 @@
     </section>
 
     <footer>
-        <p>&copy; 2025 CyberEduca</p>
+        <p>CyberEduca</p> 
     </footer>
 </body>
 </html>
