--- a/actividad5_marketing.html
+++ b/actividad5_marketing.html
@@ -141,7 +141,7 @@
     </section>
 
     <footer>
-        <p>&copy; 2025 CyberEduca</p>
+        <p>CyberEduca</p> 
     </footer>
 </body>
 </html>
