--- a/actividad6_marketing.html
+++ b/actividad6_marketing.html
@@ -183,7 +183,7 @@
     </section>
 
     <footer>
-        <p>&copy; 2025 CyberEduca</p>
+        <p>CyberEduca</p> 
     </footer>
 </body>
 </html>
