--- a/actividad7_marketing.html
+++ b/actividad7_marketing.html
@@ -116,7 +116,7 @@
     </section>
 
     <footer>
-        <p>&copy; 2025 CyberEduca</p>
+        <p>CyberEduca</p> 
     </footer>
 </body>
 </html>
