--- a/actividad7_marketing.html
+++ b/actividad7_marketing.html
@@ -96,12 +96,12 @@
     <section>
         <h2>Política de Distribución</h2>
         <h2>Canales de Distribución</h2>
-        <p>Dado que es una plataforma educativa online en su mayor parte los canales de distribución son digitales. De esto canales podemos distinguir de dos tipos:</p>
+        <p>Dado que arrancamos de forma Online, la mayor parte los canales de distribución son digitales. De esto canales podemos distinguir de dos tipos:</p>
         <table>
             <tr>
                 <td>
                     <strong>Directa</strong><br>
-                    -La mayoría de clientes acceden directamente a través de plataformas online a nuestros cursos con lo cual evitamos intermediarios físicos ni mayoristas.
+                    -La mayoría de clientes acceden directamente a través de plataformas online a nuestros cursos con lo cual evitamos intermediarios físicos ni mayoristas como tal.
                 </td>
                 <td>
                     <strong>A través de socios</strong><br>
