--- a/actividad8_marketing.html
+++ b/actividad8_marketing.html
@@ -100,7 +100,7 @@
             <tr>
                 <td>
                     -Página Web: Sitio donde donde los clientes pueden conocer la oferta, inscribirse y acceder al contenido.<br>
-                    -Redes Sociales: Campañas en Linkedin y canal gratuito de Youtube para darnos a conocer en los ámbitos que nos interesan. En estas redes sociales podemos dar alguna clase o práctica gratuita para atraer clientela<br>
+                    -Redes Sociales: Campañas en Linkedin y canal gratuito de Youtube para darnos a conocer en los ámbitos que nos interesan. En estas redes sociales podemos dar alguna clase o práctica gratuita para atraer clientela.<br>
                     -Motores de búsqueda: En un principio tendremos que hacer nosotros por mejorar la visibilidad en motores de búsqueda, posteriormente se puede considerar como una inversión pagar por anuncios pagados y mejores puestos a nivel de búsqueda.<br>
                 </td>
             </tr>
@@ -113,6 +113,7 @@
         <p>Podemos participar en eventos interactivos como ferias educativas y tecnológicas para darnos a conocer e incluso participar en retos de ciberseguridad para demostrar conocimientos y experiencia.</p> 
 
         <h2>Calendario</h2>
+        <p>Proponemos un calendario de actuación en internet y redes donde le damos prioridad a Septiembre y Enero por la razón de inicio de nuevos cursos o proyectos personales.</p>
         <table><thead><tr><th><strong>Mes</strong></th><th><strong>Actividad</strong></th><th><strong>Presupuesto (€)</strong></th></tr></thead><tbody><tr><td>Enero</td><td>Campaña en redes sociales (lanzamiento)</td><td>500</td></tr><tr><td>Febrero</td><td>Taller gratuito de introducción</td><td>300</td></tr><tr><td>Marzo</td><td>Publicidad en Google Ads</td><td>400</td></tr><tr><td>Abril</td><td>Competencia de ciberseguridad online</td><td>600</td></tr><tr><td>Mayo</td><td>Publicación de artículos en LinkedIn</td><td>200</td></tr><tr><td>Septiembre</td><td>Refuerzo de publicaciones por inicio de curso lectivo</td><td>300</td></tr></tbody></table><p><strong>Total:</strong> 2.300 €</p>
         
     <footer>
