--- a/actividad_final_marketing.html
+++ b/actividad_final_marketing.html
@@ -95,7 +95,13 @@
 
     <section>
         <h2>Nos Evaluamos</h2>
-        <p>Aquí puedes escribir el contenido relacionado con la evaluación final de las actividades.</p>
+        <p>El diseño de la web y logo fue hecha inicialmente por la IA. Luego, una vez tenía diseñado lo básico, lo fuí ajustando a mi gusto y necesidades de la tarea dejándolo más "profesional".</p>
+        <p>En cuanto al contenido,  tengo la sensación que algunas cosas se repiten en algunos puntos o, tambien puede ser, que las he completado más de lo necesario.</p>
+        <p>En cuanto a los precios de nuestros productos se han calculado de forma "rápida". Si es cierto que al principio del negocio son más exactos ya que al ser cursos Online su coste es más sencillo y básico de calcular pero, una vez se expanda el negocio y haya que alquilar una oficina o sitio de Coworking con otras empresas, puede variar mucho el precio de venta intentando siempre (sobre todo al principio) llevarlo lo más bajo posible hasta captar una buena base de clientela y reputación.</p>
+        <p>Es cierto que al principìo me agobié un poco a la hora de realizar la web, ajustarla, el contenido,... pero luego he ido desarrollándola poco a poco y creo que me ha salido un buen trabajo.</p><br>
+        <p>Nota Final: <strong>9/10</strong></p>
+
+
     </section>
 
     <footer>
