--- a/actividad2_marketing.html
+++ b/actividad2_marketing.html
@@ -113,15 +113,15 @@
         <table>
             <tr>
                 <th>Factores económicos</th>
-                <td>Hay una fuerte demanda de Ciberseguridad debido al aumento de ataques cibernéticos. Debido a esto, tanto empresas como particulares invierten más en formación sobre ciberseguridad. Esto genera un mercado en crecimiento</td>
+                <td>Hay una fuerte demanda de Ciberseguridad debido al aumento de ataques cibernéticos. Debido a esto, tanto empresas como particulares invierten más en formación sobre ciberseguridad. Esto genera un mercado en crecimiento.</td>
             </tr>
             <tr>
                 <th>Factores socioculturales</th>
-                <td>Los usuarios están cada vez más preocupados por proteger sus datos e información, lo que impulsa la demanda de formación accesible y adaptada. Ayuda que estos cursos a todos los niveles puedan ser tanto Online como presenciales si hay suficiente demanda</td>
+                <td>Los usuarios están cada vez más preocupados por proteger sus datos e información, lo que impulsa la demanda de formación accesible y adaptada. Ayuda que estos cursos a todos los niveles puedan ser tanto Online como presenciales si hay suficiente demanda.</td>
             </tr>
             <tr>
                 <th>Factores políticos y legales</th>
-                <td>Hay diferentes leyes y reglamentos que hay que cumplir como la RGPD o certificaciones que exigen las empresas a sus trabajadores</td>
+                <td>Hay diferentes leyes y reglamentos que hay que cumplir como la RGPD o certificaciones que exigen las empresas a sus trabajadores.</td>
             </tr>
             <tr>
                 <th>Factores tecnológicos</th>
@@ -129,7 +129,7 @@
             </tr>
             <tr>
                 <th>Factores propios de mi sector</th>
-                <td>Existen muchos cursos en diversos canales sobre Ciberseguridad pero aquí se le quiere dar un enfoque más cercano y abarcar desde lo básico para niños y mayores a certificaciones exigentes para empresas y trabajadores</td>
+                <td>Existen muchos cursos en diversos canales sobre Ciberseguridad pero aquí se le quiere dar un enfoque más cercano y abarcar desde lo básico para niños y mayores a certificaciones exigentes para empresas y trabajadores.</td>
             </tr>
         </table>
 
@@ -137,19 +137,19 @@
         <table>
             <tr>
                 <th>La competencia</th>
-                <td>Hay plataformas como Udemy, Coursera, Youtube,... con cursos con formación similar pero se enfocan solo en mayor nivel o en ciertos aspectos y no en el "todo" y a todos los niveles y aquí reside la ventaja de esta academia. En el ámbito local no conozco competencia de este tipo. </td>
+                <td>Hay plataformas como Udemy, Coursera, Youtube,... con cursos con formación similar pero se enfocan solo en mayor nivel o en ciertos aspectos y no en el "todo" y a todos los niveles y aquí reside la ventaja de esta academia. En el ámbito local no conozco competencia de este tipo.</td>
             </tr>
             <tr>
                 <th>Los clientes</th>
-                <td>Desde empresas que quieren capacitar a su personal para prevenir ataques a particulares, tanto jovenes como mayores, que quieran evitar ataques de todo tipo. Tambien se pueden ofrecer cursos a Instituciones educativas</td>
+                <td>Desde empresas que quieren capacitar a su personal para prevenir ataques a particulares, tanto jovenes como mayores, que quieran evitar ataques de todo tipo. Tambien se pueden ofrecer cursos a Instituciones educativas.</td>
             </tr>
             <tr>
                 <th>Los proveedores o intermediarios</th>
-                <td>Para una atención más personalizada se puede usar tecnologías como Zoom, Teams o Moodle para impartir clases</td>
+                <td>Para una atención más personalizada se puede usar tecnologías como Zoom, Teams o Moodle para impartir clases. Tambien podemos usar Youtube y Linkedin para promocionarnos.</td>
             </tr>
             <tr>
                 <th>Productos sustitutivos</th>
-                <td>Hay muchas alternativas gratuitas como Youtube o relativamente baratas pero no engloban todos los públicos o materias que se pueden impartir aquí</td>
+                <td>Hay muchas alternativas gratuitas como Youtube o relativamente baratas pero no engloban todos los públicos o materias que se pueden impartir aquí.</td>
             </tr>
         </table>
     </section>
