--- a/actividad1_Localizacion.html
+++ b/actividad1_Localizacion.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CyberEduca - Actividad 3</title>
+    <title>CyberEduca - Actividad 1</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -67,29 +67,12 @@
             padding: 1rem 0;
             margin-top: 2rem;
         }
-        table {
-            width: 100%;
-            border-collapse: collapse;
-            margin: 1rem 0;
-        }
-        table, th, td {
-            border: 1px solid #ddd;
-        }
-        th {
-            background-color: #ffd700;
-            padding: 0.5rem;
-            text-align: center;
-        }
-        td {
-            padding: 0.5rem;
-            text-align: left;
-        }
     </style>
 </head>
 <body>
     <header>
         <h1>CyberEduca</h1>
-        <p>Actividad 3: Análisis DAFO</p>
+        <p>Actividad 1: Resumen Ejecutivo</p>
     </header>
 
     <nav>
@@ -122,50 +105,18 @@
     </nav>
 
     <section>
-        <h2>Análisis DAFO</h2>
-        
-        <table>
-            <tr>
-                <th>Externos</th>
-                <th>Internos</th>
-            </tr>
-            <tr>
-                <td>
-                    <strong>Amenazas</strong><br>
-                    -Tendencia a lo gratuito de muchos usuarios<br>
-                    -Alta competencia en grandes plataformas<br>
-                    -Desconocimiento o ignorancia acerca de la peligrosidad de los ataques cibernéticos<br>
-                    -Brecha Digital 
-                </td>
-                <td>
-                    <strong>Debilidades</strong><br>
-                    -El inicio. Es necesario invertir tiempo y recursos en construir visibilidad y confianza<br>
-                    -Capacitación tecnológica. Todo los empleados tienen que estar siempre formados y dominar los conocimientos.<br>
-                    -Dependemos de herramientas de terceros como Zoom, Moodle, Teams,... que puede afectar a la calidad de formación
-                </td>
-            </tr>
-            <tr>
-                <td>
-                    <strong>Oportunidades</strong><br>
-                    -Demanda en alza<br>
-                    -Tendencia a la formación Online ya que se adapta a todos los horarios<br>
-                    -Educación adaptada a todos los niveles<br>
-                    -Debido al punto anterior tendremos una clientela diversa
-                </td>
-                <td>
-                    <strong>Fortalezas</strong><br>
-                    -Formación innovadora que nos separa de la competencia<br>
-                    -Escalabilidad. Según se aumente la demanda o tecnología se pueden abrir nuevos cursos<br>
-                    -Personalización de cursos. Podemos adaptar los cursos a las necesidades de los clientes<br>
-                    -Bajo costo inicial. En un principio con pocos recursos podemos hacer cursos online pero si aumenta la demanda se puede hacer tambien presenciales<br>
-                    -Flexibilidad. Al combinar cursos Online y presencial cuando llegue el momento 
-                </td>
-            </tr>
-        </table>
+        <h2>Resumen Ejecutivo</h2>
+        <p>CyberEduca es una plataforma innovadora dedicada a la formación en Ciberseguridad para públicos de todos los niveles, donde en un principio será Online y posteriormente presencial. Nuestra misión es ayudar a personas y empresas con los conocimientos necesarios para protegerse en un entorno digital cada vez más desafiante y peligroso.<br>
+            El proyecto surge como respuesta a la creciente desinformación en seguridad Online y sus consecuencias, como fraudes y robo de datos.<br>
+            Nos diferenciamos por ofrecer cursos accesibles, prácticos y personalizados para segmentos específicos como personas mayores, estudiantes, profesionales y empresas.<br>
+            Nuestro equipo está formado por expertos apasionados por la educación, tecnología y la Ciberseguridad, comprometidos en brindar contenido actualizado y útil. <br>
+            Con una inversión inicial mínima, aprovechamos recursos tecnológicos para maximizar la rentabilidad y minimizar riesgos.<br>
+            La clave de nuestro éxito se basa en la combinación de accesibilidad, flexibilidad y calidad, que permite a nuestros clientes aprender de forma efectiva y práctica. Buscamos posicionarnos como una referencia en educación en Ciberseguridad, contribuyendo a un entorno digital más seguro para todos.
+            </p>
     </section>
 
     <footer>
-        <p>CyberEduca</p> 
+        <p>CyberEduca</p>
     </footer>
 </body>
 </html>
