--- a/actividad2_Localizacion.html
+++ b/actividad2_Localizacion.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CyberEduca - Actividad 3</title>
+    <title>CyberEduca - Actividad 1</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -67,29 +67,27 @@
             padding: 1rem 0;
             margin-top: 2rem;
         }
-        table {
-            width: 100%;
-            border-collapse: collapse;
-            margin: 1rem 0;
+        .uniform-image {
+            width: 300px;
+            height: auto;
+            display: block;
+        }
+        .centered-table {
+            margin: 0 auto; /* Centra la tabla horizontalmente */
+            text-align: center; /* Centra el contenido dentro de las celdas */
         }
         table, th, td {
-            border: 1px solid #ddd;
-        }
-        th {
-            background-color: #ffd700;
-            padding: 0.5rem;
-            text-align: center;
+            border: none; /* Quita bordes */
         }
         td {
-            padding: 0.5rem;
-            text-align: left;
+            width: 20px; /* Espacio entre imágenes */
         }
     </style>
 </head>
 <body>
     <header>
         <h1>CyberEduca</h1>
-        <p>Actividad 3: Análisis DAFO</p>
+        <p>Actividad 2: Localización de la Empresa</p>
     </header>
 
     <nav>
@@ -122,50 +120,26 @@
     </nav>
 
     <section>
-        <h2>Análisis DAFO</h2>
-        
-        <table>
-            <tr>
-                <th>Externos</th>
-                <th>Internos</th>
-            </tr>
-            <tr>
-                <td>
-                    <strong>Amenazas</strong><br>
-                    -Tendencia a lo gratuito de muchos usuarios<br>
-                    -Alta competencia en grandes plataformas<br>
-                    -Desconocimiento o ignorancia acerca de la peligrosidad de los ataques cibernéticos<br>
-                    -Brecha Digital 
-                </td>
-                <td>
-                    <strong>Debilidades</strong><br>
-                    -El inicio. Es necesario invertir tiempo y recursos en construir visibilidad y confianza<br>
-                    -Capacitación tecnológica. Todo los empleados tienen que estar siempre formados y dominar los conocimientos.<br>
-                    -Dependemos de herramientas de terceros como Zoom, Moodle, Teams,... que puede afectar a la calidad de formación
-                </td>
-            </tr>
-            <tr>
-                <td>
-                    <strong>Oportunidades</strong><br>
-                    -Demanda en alza<br>
-                    -Tendencia a la formación Online ya que se adapta a todos los horarios<br>
-                    -Educación adaptada a todos los niveles<br>
-                    -Debido al punto anterior tendremos una clientela diversa
-                </td>
-                <td>
-                    <strong>Fortalezas</strong><br>
-                    -Formación innovadora que nos separa de la competencia<br>
-                    -Escalabilidad. Según se aumente la demanda o tecnología se pueden abrir nuevos cursos<br>
-                    -Personalización de cursos. Podemos adaptar los cursos a las necesidades de los clientes<br>
-                    -Bajo costo inicial. En un principio con pocos recursos podemos hacer cursos online pero si aumenta la demanda se puede hacer tambien presenciales<br>
-                    -Flexibilidad. Al combinar cursos Online y presencial cuando llegue el momento 
-                </td>
-            </tr>
-        </table>
+        <h2>Localización de Empresa</h2>
+        <p>En un principio la idea es comenzar desde casa para abaratar costes al inicio pero cuando el negocio se expanda necesitaremos un local para nuestras clases y asesoramiento presenciales. Como nuestro lugar de inicio es Mairena del Aljarafe en Sevilla, poseemos varios centros de Coworking y el que hemos elegido es "Digital Hub" especializado en empresas digitales situado en un polígono situado a 15 minutos de centro de la capital y con buen transporte público para llegar.<br> Su web es la siguiente: <a href="https://coworkingsevilla.digital/">Visita Digital Hub</a></p>
+        <p>Como se puede ver en las imágenes, dispone de salas de reuniones, despachos,... equipados y con gran capacidad de adaptación según nuestras necesidades.</p>
+    
+
+    <table class="centered-table">
+        <tr>
+            <th><img class="uniform-image" src="images/sala-exposicion.jpg" alt="Sala Exposición"></th>
+            <td style="width: 400px;"></td>
+            <th><img class="uniform-image" src="images/sala-bombilla.jpg" alt="Sala Bombilla"></th>
+        </tr>
+    </table>
+        <p>Al estar rodeado en este espacio de Coworking por empresas tecnológicas permite interactuar con otros emprendedores y posibles colaboradores ampliando así nuestras oportunidades de negocio.</p>
+        <p>Tambien contamos con la ventaja de costes reducidos ya que compartimos gastos entre todos y otras ventajas que trataremos en otros apartados.</p>
+        <p>Como se puede observar, todo esto nos pueden ayudar en la evolución positiva de nuestro proyecto.</p>
+
     </section>
 
     <footer>
-        <p>CyberEduca</p> 
+        <p>CyberEduca</p>
     </footer>
 </body>
 </html>
