--- a/actividad5_Localizacion.html
+++ b/actividad5_Localizacion.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CyberEduca - Actividad 3</title>
+    <title>CyberEduca - Actividad 1</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -67,29 +67,12 @@
             padding: 1rem 0;
             margin-top: 2rem;
         }
-        table {
-            width: 100%;
-            border-collapse: collapse;
-            margin: 1rem 0;
-        }
-        table, th, td {
-            border: 1px solid #ddd;
-        }
-        th {
-            background-color: #ffd700;
-            padding: 0.5rem;
-            text-align: center;
-        }
-        td {
-            padding: 0.5rem;
-            text-align: left;
-        }
     </style>
 </head>
 <body>
     <header>
         <h1>CyberEduca</h1>
-        <p>Actividad 3: Análisis DAFO</p>
+        <p>Actividad 5: Prevención de Riesgos Laborales</p>
     </header>
 
     <nav>
@@ -122,50 +105,18 @@
     </nav>
 
     <section>
-        <h2>Análisis DAFO</h2>
-        
-        <table>
-            <tr>
-                <th>Externos</th>
-                <th>Internos</th>
-            </tr>
-            <tr>
-                <td>
-                    <strong>Amenazas</strong><br>
-                    -Tendencia a lo gratuito de muchos usuarios<br>
-                    -Alta competencia en grandes plataformas<br>
-                    -Desconocimiento o ignorancia acerca de la peligrosidad de los ataques cibernéticos<br>
-                    -Brecha Digital 
-                </td>
-                <td>
-                    <strong>Debilidades</strong><br>
-                    -El inicio. Es necesario invertir tiempo y recursos en construir visibilidad y confianza<br>
-                    -Capacitación tecnológica. Todo los empleados tienen que estar siempre formados y dominar los conocimientos.<br>
-                    -Dependemos de herramientas de terceros como Zoom, Moodle, Teams,... que puede afectar a la calidad de formación
-                </td>
-            </tr>
-            <tr>
-                <td>
-                    <strong>Oportunidades</strong><br>
-                    -Demanda en alza<br>
-                    -Tendencia a la formación Online ya que se adapta a todos los horarios<br>
-                    -Educación adaptada a todos los niveles<br>
-                    -Debido al punto anterior tendremos una clientela diversa
-                </td>
-                <td>
-                    <strong>Fortalezas</strong><br>
-                    -Formación innovadora que nos separa de la competencia<br>
-                    -Escalabilidad. Según se aumente la demanda o tecnología se pueden abrir nuevos cursos<br>
-                    -Personalización de cursos. Podemos adaptar los cursos a las necesidades de los clientes<br>
-                    -Bajo costo inicial. En un principio con pocos recursos podemos hacer cursos online pero si aumenta la demanda se puede hacer tambien presenciales<br>
-                    -Flexibilidad. Al combinar cursos Online y presencial cuando llegue el momento 
-                </td>
-            </tr>
-        </table>
+        <h2>Prevención de Riesgos Laborales</h2>
+        <h3>Servicio de Prevención</h3>
+        <p>En cuanto a modalidad de organización de prevención eligíría llevarlo yo personalmente ya que dispongo de los conocimientos básicos en Prevención de Riesgos Laborales. Si la empresa aumenta a un número significativo de personal si se podría valorar la opción de elegir un Servicio de prevención ajeno que se pueden encontrar en el mercado a bajo coste para este tipo de empresas.</p>
+        <h3>Tipos de Riesgos</h3>
+        <p>Los riesgos laborales en este tipo de trabajo son dos: la fatiga visual y postural.<br> 
+            Al estar tiempos prolongados frente a pantallas y en posturas inadecuadas puede provocar problemas que se pueden reducir con sencillos métodos como descansar la vista de forma periódica y ajustar el brillo y contraste de las pantallas y pausas para movilidad y estiramientos en el caso de la postura.<br>
+        Tambien es importante disponer de buena luz tanto natural como artificial y de buenas sillas ergonómicas que mejoren las condiciones.</p>
+
     </section>
 
     <footer>
-        <p>CyberEduca</p> 
+        <p>CyberEduca</p>
     </footer>
 </body>
 </html>
