--- a/actividad3_Localizacion.html
+++ b/actividad3_Localizacion.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CyberEduca - Actividad 3</title>
+    <title>CyberEduca - Actividad 1</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -67,29 +67,12 @@
             padding: 1rem 0;
             margin-top: 2rem;
         }
-        table {
-            width: 100%;
-            border-collapse: collapse;
-            margin: 1rem 0;
-        }
-        table, th, td {
-            border: 1px solid #ddd;
-        }
-        th {
-            background-color: #ffd700;
-            padding: 0.5rem;
-            text-align: center;
-        }
-        td {
-            padding: 0.5rem;
-            text-align: left;
-        }
     </style>
 </head>
 <body>
     <header>
         <h1>CyberEduca</h1>
-        <p>Actividad 3: Análisis DAFO</p>
+        <p>Actividad 3: Plan de Producción o de Operaciones</p>
     </header>
 
     <nav>
@@ -122,50 +105,39 @@
     </nav>
 
     <section>
-        <h2>Análisis DAFO</h2>
-        
-        <table>
-            <tr>
-                <th>Externos</th>
-                <th>Internos</th>
-            </tr>
-            <tr>
-                <td>
-                    <strong>Amenazas</strong><br>
-                    -Tendencia a lo gratuito de muchos usuarios<br>
-                    -Alta competencia en grandes plataformas<br>
-                    -Desconocimiento o ignorancia acerca de la peligrosidad de los ataques cibernéticos<br>
-                    -Brecha Digital 
-                </td>
-                <td>
-                    <strong>Debilidades</strong><br>
-                    -El inicio. Es necesario invertir tiempo y recursos en construir visibilidad y confianza<br>
-                    -Capacitación tecnológica. Todo los empleados tienen que estar siempre formados y dominar los conocimientos.<br>
-                    -Dependemos de herramientas de terceros como Zoom, Moodle, Teams,... que puede afectar a la calidad de formación
-                </td>
-            </tr>
-            <tr>
-                <td>
-                    <strong>Oportunidades</strong><br>
-                    -Demanda en alza<br>
-                    -Tendencia a la formación Online ya que se adapta a todos los horarios<br>
-                    -Educación adaptada a todos los niveles<br>
-                    -Debido al punto anterior tendremos una clientela diversa
-                </td>
-                <td>
-                    <strong>Fortalezas</strong><br>
-                    -Formación innovadora que nos separa de la competencia<br>
-                    -Escalabilidad. Según se aumente la demanda o tecnología se pueden abrir nuevos cursos<br>
-                    -Personalización de cursos. Podemos adaptar los cursos a las necesidades de los clientes<br>
-                    -Bajo costo inicial. En un principio con pocos recursos podemos hacer cursos online pero si aumenta la demanda se puede hacer tambien presenciales<br>
-                    -Flexibilidad. Al combinar cursos Online y presencial cuando llegue el momento 
-                </td>
-            </tr>
-        </table>
+        <h2>Plan de Producción o de Operaciones</h2>
+        <p>Siguiendo el guión adaptado a nuestras necesidades podemos identificar los siguientes planes:</p>
+        <h4>Recursos Necesarios</h4>
+        <p>Para los cursos Online necesitaremos de un buen equipo con capacidad de grabación y edición de video, Webcam o cámara de calidad, microfono profesional.<br>
+        Además debemos de disponer un buen sistema de almacenamiento digital o nube para copias de seguridad que garanticen la disponibilidad y suficiente espacio. En cuanto al software priorizaremos por el gratuito o libre tanto para edición de video, simuladores para ejecricios prácticos,... </p>
+        <p>En el caso de cursos presencial necesitaremos material impreso (manuales teóricos, ejercicios,...), proyectores, pizarra, ordenador portátil,...</p>
+
+        <h4>Proveedores</h4>
+        <p>En este caso se puede comprar todo el equipo tecnológico y material de oficina a tiendas cercanas especializadas o alguna web concreta.</p>
+
+        <h4>Servicios Ofrecidos</h4>
+        <p>Como hemos comentado en anteriores ocasiones, inicialmente ofrecemos cursos Online disponibles 24/7 desde cualquier lugar con conexión a internet a través de plataformas de formación que dispondrán de foros de preguntas y soporte técnico. <br>
+        Más adelante iniciaremos los cursos y talleres presenciales cuya frecuencia será según demanda y tipo de curso y, según la modalidad de este, adaptado al cliente. Cabe destacar que se pueden ofrecer estos cursos en las instalaciones del cliente si es necesario para facilitar la formación de los empleados.</p>
+
+        <h4>Recolección de Información</h4>
+        <p>Toda la información relacionada con inscripciones, asistencias, progresos y consultas será gestionada por las plataformas de enseñanza Online existentes.</p>
+
+        <h4>Colaboradores Externos</h4>
+        <p>Más adelante se podría contar con expertos en Ciberseguridad para talleres o contenido Online avanzado además de diseñadores gráficos o editores de videos para mejorar la calidad didáctica de los materiales didácticos.</p>
+
+        <h4>Apariencia del local</h4>
+        <p>Salas de reunión con proyectores y pizarra con un mobiliario sencillo y despachos donde realizar las grabaciones de los cursos Online. Todo lo necesario ya viene en las oficinas de Coworking elegidas.</p>
+
+        <h4>Calidad y Certificaciones</h4>
+        <p>Punto muy importante ya que a la larga nos proyectará una buena imagen. Se revisarán los contenidos de forma periódica para adaptarlos a las nuevas tecnologías y a la satisfacción de los clientes. Se realizarán encuestas de satisfacción a los clientes para la mejora continua. Más adelante se podrá obtener certificaciones o acreditaciones reconocidas en el sector de tipo ISO o AENOR.</p>
+
+        <h4>Presupuestos</h4>
+        <p>En el caso de servicios personalizados como talleres o consultorías se hará un presupuesto previo competitivo adaptado al cliente. El resto de servicios tienen los precios claramente indicados para que no haya ningun tipo de duda.</p>
+
     </section>
 
     <footer>
-        <p>CyberEduca</p> 
+        <p>CyberEduca</p>
     </footer>
 </body>
 </html>
