--- a/actividad_final_Localizacion.html
+++ b/actividad_final_Localizacion.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CyberEduca - Actividad 3</title>
+    <title>CyberEduca - Actividad Final</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -67,29 +67,12 @@
             padding: 1rem 0;
             margin-top: 2rem;
         }
-        table {
-            width: 100%;
-            border-collapse: collapse;
-            margin: 1rem 0;
-        }
-        table, th, td {
-            border: 1px solid #ddd;
-        }
-        th {
-            background-color: #ffd700;
-            padding: 0.5rem;
-            text-align: center;
-        }
-        td {
-            padding: 0.5rem;
-            text-align: left;
-        }
     </style>
 </head>
 <body>
     <header>
         <h1>CyberEduca</h1>
-        <p>Actividad 3: Análisis DAFO</p>
+        <p>Actividad Final: Nos Evaluamos</p>
     </header>
 
     <nav>
@@ -122,46 +105,17 @@
     </nav>
 
     <section>
-        <h2>Análisis DAFO</h2>
-        
-        <table>
-            <tr>
-                <th>Externos</th>
-                <th>Internos</th>
-            </tr>
-            <tr>
-                <td>
-                    <strong>Amenazas</strong><br>
-                    -Tendencia a lo gratuito de muchos usuarios<br>
-                    -Alta competencia en grandes plataformas<br>
-                    -Desconocimiento o ignorancia acerca de la peligrosidad de los ataques cibernéticos<br>
-                    -Brecha Digital 
-                </td>
-                <td>
-                    <strong>Debilidades</strong><br>
-                    -El inicio. Es necesario invertir tiempo y recursos en construir visibilidad y confianza<br>
-                    -Capacitación tecnológica. Todo los empleados tienen que estar siempre formados y dominar los conocimientos.<br>
-                    -Dependemos de herramientas de terceros como Zoom, Moodle, Teams,... que puede afectar a la calidad de formación
-                </td>
-            </tr>
-            <tr>
-                <td>
-                    <strong>Oportunidades</strong><br>
-                    -Demanda en alza<br>
-                    -Tendencia a la formación Online ya que se adapta a todos los horarios<br>
-                    -Educación adaptada a todos los niveles<br>
-                    -Debido al punto anterior tendremos una clientela diversa
-                </td>
-                <td>
-                    <strong>Fortalezas</strong><br>
-                    -Formación innovadora que nos separa de la competencia<br>
-                    -Escalabilidad. Según se aumente la demanda o tecnología se pueden abrir nuevos cursos<br>
-                    -Personalización de cursos. Podemos adaptar los cursos a las necesidades de los clientes<br>
-                    -Bajo costo inicial. En un principio con pocos recursos podemos hacer cursos online pero si aumenta la demanda se puede hacer tambien presenciales<br>
-                    -Flexibilidad. Al combinar cursos Online y presencial cuando llegue el momento 
-                </td>
-            </tr>
-        </table>
+        <h2>Nos Evaluamos</h2>
+        <p>Como comentasteis en el video de Diciembre voy a explayarme un poco más en la evaluación:</p>
+        <p>En el resumen ejecutivo he intentado no pasarme de las 15 lineas (aunque parezca más) y expresar todo lo que queremos ser y avanzar.</p>
+        <p>La parte de localización me ha sorprendido gratamente la cercanía de estos viveros de empresas o Coworking y lo bien montados que están. La verdad es que facilita mucho la dificil tarea de dar el paso de "salir de casa" en estos tipos de negocios.</p>
+        <p>En el plan de producción o de operaciones no tube demasiados problemas, al ser un negocio "sencillo" no necesita mucha infraestructura ni proveedores ya que partimos de una formación digital.</p>
+        <p>Sobre el Equipo Humano tengo la sensación de aventurarme demasiado ya que se da por hecho un ascenso del negocio que puede diferir después en la realidad de lo que haya plasmado en este punto. Lo mismo me acaba siendo más necesario más cantidad de formadores de diversos temas que un experto en marketing digital entonces no tenía muy claro como hacer el organigrama ni organizar el equipo.<br>
+        He decidido hacerlo a este nivel que creo que es el más adecuado para un proyecto asentado y avanzado pero personalmente creo que pasaría mucho tiempo con solo yo como trabajador hasta que esto empezara a alzar el vuelo.</p>
+        <p>En cuanto a Riesgos Laborales es algo que toco casi a diario en mi trabajo. Tambien hay que reconocer que nuestro proyecto de empresa es bastante sencillo y practicamente sin peligro.</p>
+        <p>Nota Final: <strong>9/10</strong></p>
+
+
     </section>
 
     <footer>
