--- a/actividad_final_marketing.html
+++ b/actividad_final_marketing.html
@@ -91,6 +91,17 @@
                 <a href="actividad_final_marketing.html">ACTIVIDAD FINAL: NOS EVALUAMOS.</a>
             </div>
         </div>
+        <div class="dropdown">
+            <a href="#">Localización / RRHH / PO / PRL</a>
+            <div class="dropdown-content">
+                <a href="actividad1_Localizacion.html">ACTIVIDAD 1: RESUMEN EJECUTIVO.</a>
+                <a href="actividad2_Localizacion.html">ACTIVIDAD 2: LOCALIZACIÓN DE LA EMPRESA.</a>
+                <a href="actividad3_Localizacion.html">ACTIVIDAD 3: PLAN DE PRODUCCIÓN O DE OPERACIONES.</a>
+                <a href="actividad4_Localizacion.html">ACTIVIDAD 4: EQUIPO HUMANO.</a>
+                <a href="actividad5_Localizacion.html">ACTIVIDAD 5: PREVENCIÓN DE RIESGOS LABORALES.</a>
+                <a href="actividad_final_Localizacion.html">ACTIVIDAD FINAL: NOS EVALUAMOS.</a>
+            </div>
+        </div>
     </nav>
 
     <section>
